[package]
name = "thoraudit"
version = "0.1.1"
edition = "2021"
description = "Command-line utility to audit the past status of a thornode"
repository = "https://github.com/utx0/thoraudit"
keywords = ["thorchain", "thornode"]
license = "MIT"
default-run = "thoraudit"
authors = [
    "utx0 <utx0@mettadata.com>",
]

[[bin]]
name = "thoraudit"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.48"
reqwest = { version= "0.11.6", features = ["json"] }
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.71"
tokio = {"version" = "1.14.0", features = ["full"]}
